start fix layout

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html {
   @apply scroll-smooth text-[62.5%];
@@ -25,10 +25,16 @@ body {
 }
 
 .section-container {
-  max-width: min(442px, 100% - 64px);
+  max-width: min(768px, 100% - 64px);
   @apply w-full mx-auto py-[26px];
 }
 
+@media screen and (max-width: 1440px) {
+  .section-container {
+    max-width: min(442px, 100% - 64px);
+    @apply w-full mx-auto py-[26px];
+  }
+}
 @media screen and (max-width: 768px) {
   .section-container {
     max-width: min(688px, 100% - 48px);
